<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.reandroid.wallpaper.settings.PreviewPreference android:key="pref_preview"
        android:title="@string/pref_live_preview" />
    <SwitchPreferenceCompat android:key="pref_grass_enabled"
        android:title="@string/pref_grass_enabled"
        android:summary="@string/pref_grass_enabled_summary" android:defaultValue="true"
        android:layout="@layout/preference_modern_item" />
    <SeekBarPreference android:key="pref_grass_count" android:title="@string/pref_grass_count"
        android:summary="@string/pref_grass_count_summary" android:min="50" android:max="1000"
        android:defaultValue="200" app:showSeekBarValue="true"
        android:layout="@layout/preference_modern_seekbar" />
    <SeekBarPreference android:key="pref_grass_height" android:title="@string/pref_grass_height"
        android:summary="@string/pref_grass_height_summary" android:min="50" android:max="1000"
        android:defaultValue="100" app:showSeekBarValue="true"
        android:layout="@layout/preference_modern_seekbar" />
    <SeekBarPreference android:key="pref_grass_width" android:title="@string/pref_grass_width"
        android:summary="@string/pref_grass_width_summary" android:min="50" android:max="600"
        android:defaultValue="100" app:showSeekBarValue="true"
        android:layout="@layout/preference_modern_seekbar" />
    <SeekBarPreference android:key="pref_grass_hardness" android:title="@string/pref_grass_hardness"
        android:summary="@string/pref_grass_hardness_summary" android:min="30" android:max="300"
        android:defaultValue="100" app:showSeekBarValue="true"
        android:layout="@layout/preference_modern_seekbar" />
    <ListPreference android:key="pref_grass_color" android:title="@string/pref_grass_color"
        android:summary="@string/pref_grass_color_summary"
        android:entries="@array/grass_color_entries" android:entryValues="@array/grass_color_values"
        android:defaultValue="default" android:layout="@layout/preference_modern_item" />
    <SwitchPreferenceCompat android:key="pref_grass_night_invert"
        android:title="@string/pref_grass_night_invert" android:defaultValue="false"
        android:layout="@layout/preference_modern_item" />
    <SwitchPreferenceCompat android:key="pref_grass_night_desaturate"
        android:title="@string/pref_grass_night_desaturate" android:defaultValue="false"
        android:layout="@layout/preference_modern_item" />
    <SwitchPreferenceCompat android:key="pref_grass_accurate_sun"
        android:title="@string/pref_grass_accurate_sun"
        android:summary="@string/pref_grass_accurate_sun_summary" android:defaultValue="false"
        android:layout="@layout/preference_modern_item" />
    <SwitchPreferenceCompat android:key="pref_grass_sun" android:title="@string/pref_grass_sun"
        android:summary="@string/pref_grass_sun_summary" android:defaultValue="true"
        android:layout="@layout/preference_modern_item" />
    <SwitchPreferenceCompat android:key="pref_grass_moon" android:title="@string/pref_grass_moon"
        android:summary="@string/pref_grass_moon_summary" android:defaultValue="true"
        android:layout="@layout/preference_modern_item" />
    <SwitchPreferenceCompat android:key="pref_grass_dandelion"
        android:title="@string/pref_grass_dandelion"
        android:summary="@string/pref_grass_dandelion_summary" android:defaultValue="false"
        android:layout="@layout/preference_modern_item" />
    <SeekBarPreference android:key="pref_grass_dandelion_count"
        android:title="@string/pref_grass_dandelion_count" android:min="1" android:max="30"
        android:defaultValue="10" app:showSeekBarValue="true"
        android:layout="@layout/preference_modern_seekbar" />
    <SeekBarPreference android:key="pref_grass_dandelion_speed"
        android:title="@string/pref_grass_dandelion_speed" android:min="100" android:max="1000"
        android:defaultValue="600" app:showSeekBarValue="true"
        android:layout="@layout/preference_modern_seekbar" />
    <SwitchPreferenceCompat android:key="pref_grass_firefly"
        android:title="@string/pref_grass_firefly"
        android:summary="@string/pref_grass_firefly_summary" android:defaultValue="false"
        android:layout="@layout/preference_modern_item" />
    <SeekBarPreference android:key="pref_grass_firefly_count"
        android:title="@string/pref_grass_firefly_count" android:min="1" android:max="60"
        android:defaultValue="16" app:showSeekBarValue="true"
        android:layout="@layout/preference_modern_seekbar" />
    <SwitchPreferenceCompat
        android:key="pref_grass_legacy_particles"
        android:title="@string/pref_grass_legacy_particles"
        android:summary="@string/pref_grass_legacy_particles_summary"
        android:defaultValue="false"
        android:layout="@layout/preference_modern_item" />
    <Preference android:key="pref_open_wallpaper_picker"
        android:title="@string/pref_open_wallpaper_picker"
        android:layout="@layout/preference_modern_item" />
</PreferenceScreen>