<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.reandroid.settings.PreviewPreference android:key="pref_preview" android:title="@string/pref_live_preview" />
    <Preference android:key="pref_open_wallpaper_picker" android:title="@string/pref_open_wallpaper_picker" android:layout="@layout/preference_modern_item" />
    <androidx.preference.SeekBarPreference android:key="galaxy_particle_count" android:title="@string/pref_galaxy_particle_count" android:summary="@string/pref_galaxy_particle_count_summary" android:defaultValue="12000" android:max="19000" app:min="1000" app:seekBarIncrement="1000" app:showSeekBarValue="true" android:layout="@layout/preference_modern_seekbar" />
    <androidx.preference.SeekBarPreference android:key="galaxy_particle_alpha" android:title="@string/pref_galaxy_particle_alpha" android:summary="@string/pref_galaxy_particle_alpha_summary" android:defaultValue="100" android:max="100" app:min="10" app:seekBarIncrement="5" app:showSeekBarValue="true" android:layout="@layout/preference_modern_seekbar" />
    <androidx.preference.SwitchPreferenceCompat android:key="galaxy_precise_calc" android:title="@string/pref_galaxy_precise_calc" android:summary="@string/pref_galaxy_precise_calc_summary" android:defaultValue="false" android:layout="@layout/preference_modern_item" />
    <androidx.preference.SwitchPreferenceCompat android:key="pref_galaxy_use_light2" android:title="@string/pref_galaxy_use_light2" android:summary="@string/pref_galaxy_use_light2_summary" android:defaultValue="false" android:layout="@layout/preference_modern_item" />
    <androidx.preference.SeekBarPreference android:key="galaxy_arm_count" android:title="@string/pref_galaxy_arm_count" android:summary="@string/pref_galaxy_arm_count_summary" android:defaultValue="2" android:max="6" app:min="1" app:seekBarIncrement="1" app:showSeekBarValue="true" android:layout="@layout/preference_modern_seekbar" />
    <androidx.preference.SeekBarPreference android:key="galaxy_arm_offset" android:title="@string/pref_galaxy_arm_offset" android:summary="@string/pref_galaxy_arm_offset_summary" android:defaultValue="3141" android:max="6283" app:min="0" app:seekBarIncrement="50" app:showSeekBarValue="true" android:layout="@layout/preference_modern_seekbar" />
    <androidx.preference.SeekBarPreference android:key="galaxy_pitch_angle_deg" android:title="@string/pref_galaxy_pitch_angle" android:summary="@string/pref_galaxy_pitch_angle_summary" android:defaultValue="67" android:max="300" app:min="0" app:seekBarIncrement="5" app:showSeekBarValue="true" android:layout="@layout/preference_modern_seekbar" />
    <androidx.preference.SeekBarPreference android:key="galaxy_inner_scatter" android:title="@string/pref_galaxy_inner_scatter" android:summary="@string/pref_galaxy_inner_scatter_summary" android:defaultValue="135" android:max="500" app:min="0" app:seekBarIncrement="5" app:showSeekBarValue="true" android:layout="@layout/preference_modern_seekbar" />
    <androidx.preference.SeekBarPreference android:key="galaxy_outer_scatter" android:title="@string/pref_galaxy_outer_scatter" android:summary="@string/pref_galaxy_outer_scatter_summary" android:defaultValue="75" android:max="500" app:min="0" app:seekBarIncrement="5" app:showSeekBarValue="true" android:layout="@layout/preference_modern_seekbar" />
    <androidx.preference.SeekBarPreference android:key="galaxy_turbulence" android:title="@string/pref_galaxy_turbulence" android:summary="@string/pref_galaxy_turbulence_summary" android:defaultValue="28" android:max="200" app:min="0" app:seekBarIncrement="2" app:showSeekBarValue="true" android:layout="@layout/preference_modern_seekbar" />
    <androidx.preference.SeekBarPreference android:key="galaxy_forbidden_radius" android:title="@string/pref_galaxy_forbidden_radius" android:summary="@string/pref_galaxy_forbidden_radius_summary" android:defaultValue="282" android:max="1000" app:min="0" app:seekBarIncrement="10" app:showSeekBarValue="true" android:layout="@layout/preference_modern_seekbar" />
    <androidx.preference.SeekBarPreference android:key="galaxy_ellipse_ratio" android:title="@string/pref_galaxy_ellipse_ratio" android:summary="@string/pref_galaxy_ellipse_ratio_summary" android:defaultValue="892" android:max="1000" app:min="500" app:seekBarIncrement="5" app:showSeekBarValue="true" android:layout="@layout/preference_modern_seekbar" />
    <androidx.preference.SeekBarPreference android:key="galaxy_ellipse_twist" android:title="@string/pref_galaxy_ellipse_twist" android:summary="@string/pref_galaxy_ellipse_twist_summary" android:defaultValue="123" android:max="200" app:min="0" app:seekBarIncrement="1" app:showSeekBarValue="true" android:layout="@layout/preference_modern_seekbar" />
</PreferenceScreen>