<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.reandroid.settings.PreviewPreference android:key="pref_preview"
        android:title="@string/pref_live_preview" />
    <Preference android:key="pref_open_wallpaper_picker"
        android:title="@string/pref_open_wallpaper_picker"
        android:layout="@layout/preference_modern_item" />
    <ListPreference android:key="nexus_background_preset"
        android:title="@string/pref_nexus_background_title"
        android:entries="@array/nexus_background_entries"
        android:entryValues="@array/nexus_background_values"
        android:defaultValue="pyramid_background" android:layout="@layout/preference_modern_item" />
    <Preference android:key="pref_nexus_custom_background"
        android:title="@string/pref_nexus_custom_background_title"
        android:summary="@string/pref_nexus_custom_background_summary"
        android:layout="@layout/preference_modern_item" />
    <Preference android:key="pref_nexus_reset_background"
        android:title="@string/pref_nexus_reset_background_title"
        android:summary="@string/pref_nexus_reset_background_summary"
        android:layout="@layout/preference_modern_item" />
    <SeekBarPreference android:key="nexus_max_pulses" android:title="@string/pref_nexus_max_pulses"
        android:summary="@string/pref_nexus_max_pulses_summary" android:min="1" android:max="100"
        android:defaultValue="20" app:showSeekBarValue="true"
        android:layout="@layout/preference_modern_seekbar" />
    <SeekBarPreference android:key="nexus_max_extras" android:title="@string/pref_nexus_max_extras"
        android:summary="@string/pref_nexus_max_extras_summary" android:min="1" android:max="200"
        android:defaultValue="40" app:showSeekBarValue="true"
        android:layout="@layout/preference_modern_seekbar" />
    <SeekBarPreference android:key="nexus_pulse_size" android:title="@string/pref_nexus_pulse_size"
        android:summary="@string/pref_nexus_pulse_size_summary" android:min="5" android:max="100"
        android:defaultValue="14" app:showSeekBarValue="true"
        android:layout="@layout/preference_modern_seekbar" />
    <SeekBarPreference android:key="nexus_glow_size" android:title="@string/pref_nexus_glow_size"
        android:summary="@string/pref_nexus_glow_size_summary" android:min="10" android:max="200"
        android:defaultValue="64" app:showSeekBarValue="true"
        android:layout="@layout/preference_modern_seekbar" />
    <SeekBarPreference android:key="nexus_speed" android:title="@string/pref_nexus_speed"
        android:summary="@string/pref_nexus_speed_summary" android:min="1" android:max="100"
        android:defaultValue="20" app:showSeekBarValue="true"
        android:layout="@layout/preference_modern_seekbar" />
    <SeekBarPreference android:key="nexus_speed_delta_min"
        android:title="@string/pref_nexus_speed_delta_min"
        android:summary="@string/pref_nexus_speed_delta_min_summary" android:min="0"
        android:max="200" android:defaultValue="70" app:showSeekBarValue="true"
        android:layout="@layout/preference_modern_seekbar" />
    <SeekBarPreference android:key="nexus_speed_delta_max"
        android:title="@string/pref_nexus_speed_delta_max"
        android:summary="@string/pref_nexus_speed_delta_max_summary" android:min="0"
        android:max="300" android:defaultValue="170" app:showSeekBarValue="true"
        android:layout="@layout/preference_modern_seekbar" />
    <SeekBarPreference android:key="nexus_trail_size" android:title="@string/pref_nexus_trail_size"
        android:summary="@string/pref_nexus_trail_size_summary" android:min="1" android:max="200"
        android:defaultValue="40" app:showSeekBarValue="true"
        android:layout="@layout/preference_modern_seekbar" />
    <ListPreference android:key="nexus_mode" android:title="@string/pref_nexus_mode"
        android:summary="@string/pref_nexus_mode_summary"
        android:entries="@array/nexus_mode_entries" android:entryValues="@array/nexus_mode_values"
        android:defaultValue="0" android:layout="@layout/preference_modern_item" />
</PreferenceScreen>