<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.reandroid.settings.PreviewPreference android:key="pref_preview"
        android:title="@string/pref_live_preview" />
    <SwitchPreferenceCompat android:key="musicvis_recolor"
        android:title="@string/pref_musicvis_recolor"
        android:summary="@string/pref_musicvis_recolor_summary" android:defaultValue="false"
        android:layout="@layout/preference_modern_item" />
    <ListPreference android:key="musicvis_recolor_mode"
        android:title="@string/pref_musicvis_recolor_mode"
        android:entries="@array/musicvis_recolor_mode_entries"
        android:entryValues="@array/musicvis_recolor_mode_values"
        android:defaultValue="static"
        android:layout="@layout/preference_modern_item" />
    <SeekBarPreference android:key="musicvis_hue"
        android:title="@string/pref_musicvis_hue" android:summary="@string/pref_musicvis_hue_summary"
        android:min="0" android:max="255" android:defaultValue="0"
        android:layout="@layout/preference_modern_seekbar" />
    <SeekBarPreference android:key="musicvis_saturation"
        android:title="@string/pref_musicvis_saturation" android:summary="@string/pref_musicvis_saturation_summary"
        android:min="0" android:max="255" android:defaultValue="255"
        android:layout="@layout/preference_modern_seekbar" />
    <SeekBarPreference android:key="musicvis_brightness"
        android:title="@string/pref_musicvis_brightness" android:summary="@string/pref_musicvis_brightness_summary"
        android:min="0" android:max="255" android:defaultValue="255"
        android:layout="@layout/preference_modern_seekbar" />
    <SeekBarPreference android:key="circle_ring_count"
        android:title="@string/pref_circle_ring_count" android:summary="@string/pref_circle_ring_count_summary"
        android:min="4" android:max="32" android:defaultValue="16"
        android:layout="@layout/preference_modern_seekbar" />
    <SeekBarPreference android:key="circle_line_width"
        android:title="@string/pref_circle_line_width" android:summary="@string/pref_circle_line_width_summary"
        android:min="1" android:max="30" android:defaultValue="8"
        android:layout="@layout/preference_modern_seekbar" />
    <ListPreference android:key="musicvis_bg_color"
        android:title="@string/pref_musicvis_bg_color"
        android:entries="@array/musicvis_bg_entries"
        android:entryValues="@array/musicvis_bg_values"
        android:defaultValue="#000000"
        android:layout="@layout/preference_modern_item" />
    <Preference android:key="pref_open_wallpaper_picker"
        android:title="@string/pref_open_wallpaper_picker"
        android:layout="@layout/preference_modern_item" />
</PreferenceScreen>
