<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.reandroid.settings.PreviewPreference android:key="pref_preview"
        android:title="@string/pref_live_preview" />
    <Preference android:key="pref_open_wallpaper_picker"
        android:title="@string/pref_open_wallpaper_picker"
        android:layout="@layout/preference_modern_item" />
    <Preference android:key="pref_custom_background" android:title="@string/pref_fireworks_custom_background_title"
        android:summary="@string/pref_fireworks_custom_background_summary" android:layout="@layout/preference_modern_item" />
    <Preference android:key="pref_reset_background" android:title="@string/pref_fireworks_reset_background_title"
        android:summary="@string/pref_fireworks_reset_background_summary" android:layout="@layout/preference_modern_item" />
</PreferenceScreen>